fix: :bug: try to hide scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,12 @@
 body {
     overflow: hidden;
 }
+
+* {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
